--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a88775b
+	base = 47e11f6
 	trimbase = 
 	parent = release/hydro/fs100_motoman
-	previous = 
+	previous = a88775b
