--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a2d648f
+	base = aec7cf0
 	trimbase = 
 	parent = debian/hydro/fs100_motoman
-	previous = 
+	previous = a2d648f
