--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c489c3e
+	base = ae93f8c
 	trimbase = 
 	parent = rpm/hydro/fs100_motoman
-	previous = 
+	previous = c489c3e
