Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.1": ["awijor", "awijor@elektro.dtu.dk"]}
+{"0.1.1": ["awijor", "awijor@elektro.dtu.dk"], "0.1.2": ["awijor", "awijor@elektro.dtu.dk"]}
