Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.0-0": ["Wed Dec 03 2014", "awijor", "awijor@elektro.dtu.dk"], "0.1.1-0": ["Fri Dec 05 2014", "awijor", "awijor@elektro.dtu.dk"]}
+{"0.1.0-0": ["Wed Dec 03 2014", "awijor", "awijor@elektro.dtu.dk"], "0.1.1-0": ["Fri Dec 05 2014", "awijor", "awijor@elektro.dtu.dk"], "0.1.2-0": ["Fri Dec 05 2014", "awijor", "awijor@elektro.dtu.dk"]}
