--- a/package.xml
+++ b/package.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <package>
   <name>fs100_motoman</name>
-  <version>0.1.2</version>
-  <description>The fs100_motoman package</description>
+  <version>0.1.3</version>
+  <description>The fs100_motoman package. Contains a node for connect and streaming to a FS100 controller.</description>
 
 
-  <maintainer email="awijor@elektro.dtu.dk">awijor</maintainer>
+  <maintainer email="awijor@elektro.dtu.dk">Asger Winther-Jørgensen (Technical University of Denmark)</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -17,13 +17,13 @@
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/trajectory_builder</url> -->
+  <url type="website">http://ros.org/wiki/fs100_motoman</url>
 
 
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
   <!-- Authors do not have to be maintianers, but could be -->
   <!-- Example: -->
-  <author email="asger.winther@gmail.com">Asger Winther-Jørgensen</author>
+  <author email="asger.winther@gmail.com">Asger Winther-Jørgensen (Technical Univeristy of Denmark)</author>
 
 
 
