--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.1.1": ["awijor", "awijor@elektro.dtu.dk"], "0.1.2": ["awijor", "awijor@elektro.dtu.dk"], "0.1.3": ["Asger Winther-J\u00f8rgensen (Technical University of Denmark)", "awijor@elektro.dtu.dk"], "0.1.4": ["Asger Winther-J\u00f8rgensen (Technical University of Denmark)", "awijor@elektro.dtu.dk"]}
+{"0.1.1": ["awijor", "awijor@elektro.dtu.dk"], "0.1.2": ["awijor", "awijor@elektro.dtu.dk"], "0.1.5": ["Thomas Timm Andersen (Technical University of Denmark)", "ttan@elektro.dtu.dk"]}
